modify notification popup for Rakuten API

--- a/notification.html
+++ b/notification.html
@@ -3,10 +3,10 @@
   <head>
     <meta charaset="UTF8">
     <link href="stylesheet/global.css" rel="stylesheet" type="text/css">
+    <script src="notification.js"></script>
   </head>	
   <body>
-    <h1></h1>
-    <p>Hello, Rui!!!</p>
+    <div id="content"></div>
     <a href='http://www.google.com/' target='_blank'>リンク</a>
   </body>
 </html>
