--- a/notification.html
+++ b/notification.html
@@ -7,6 +7,7 @@
   </head>	
   <body>
     <div id="content"></div>
-    <a href='http://www.google.com/' target='_blank'>リンク</a>
+    <a href='http://www.google.com/' target='_blank'>他の商品をもっとみる</a>
+    </div>
   </body>
 </html>
