--- a/options.html
+++ b/options.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html>
   <head>
-    <title>Oresabre Notification</title>
+    <title>Spring Shows Option</title>
     <link href="stylesheet/global.css" rel="stylesheet" type="text/css">
     <script src="options.js"></script>
   </head>
   <body>
     <h1>
-      <img src="images/64.png" alt="Oresabre">
-      Notification Demo
+      <img src="images/48.png" alt="Oresabre">
+      Spring Shows
     </h1>
     <h2>Options</h2>
     <form id="options">
-      Display a notification every
+      通知を
       <select name="frequency">
         <option>10</option>
         <option>20</option>
@@ -22,7 +22,7 @@
         <option>60</option>
         <option>120</option>
       </select>
-      seconds.
+      秒ごとに受け取ります。
     </form>
   </body>
 </html>
