オプションページ修正

--- a/options.html
+++ b/options.html
@@ -10,8 +10,13 @@
       <img src="images/48.png" alt="Oresabre">
       Spring Shows
     </h1>
-    <h2>Options</h2>
-    <form id="options">
+    <h2>Spring Shows について</h2>
+    <p class="optiontext">
+      あなたの閲覧しているページに関するアイテムを紹介します。<br>
+      こちらの拡張機能は、あなたがYouTubeを視聴しているときにのみアイテムを通知します。
+    </p>
+    <h2>設定</h3>
+    <form id="options" class="optiontext">
       通知を
       <select name="frequency">
         <option>10</option>
